--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html"><img src="/img/logo_batman.png" alt="Logo Batman"></a>
+        <h1>Curriculum Vitae Bruce Wayne</h1>
+    </header>
+    <main>
+        <!-- DATOS -->
+        <section>
+            <h2>Datos Personales</h2>
+            <ul>
+                <li><span>Nombre completo</span> Bruce Wayne</li>
+                <li><span>Fecha de Nacimiento</span> 01/05/1939</li>
+                <li><span>Lugar de Nacimiento</span> Gotham City</li>
+            </ul>
+        </section>
+
+        <!-- FORMACION -->
+        <section>
+            <h2>Formación Académica</h2>
+            <ul>
+                <li>
+                    <span>1956 -1661</span>
+                    <ul>
+                        <li>Universidad del espantapájaros</li>
+                        <li>Licenciatura en ereonaútica</li>
+                    </ul>
+                </li>
+                <li>
+                    <span>1952-1956</span>
+                    <ul>
+                        <li>Secundario Gotham</li>
+                        <li>Bachiller con especialización en trucos</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <!-- EXPERIENCIA -->
+        <section>
+            <h2>Experiencia Laboral</h2>
+            <ul>
+                <li>
+                    <span> 1975-1985:</span>
+                    <ul>
+                        <li>Desocupado</li>
+                        <li>Sin trabajo porquer se me rompió el batimovil</li>
+                    </ul>
+                </li>
+                <li>
+                    <span> 1965-1975:</span>
+                    <ul>
+                        <li>Cazavillanos y demás chusma</li>
+                        <li>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
+                    </ul>
+                </li>
+                <li>
+                    <span>1962-1965:</span>
+                    <ul>
+                        <li>Aprendiz de superhéroes</li>
+                        <li> Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <span>0810 - BATMAN</span> 
+        <img src="/img/ico_instagram.png" alt="Instragram">
+        <img src="/img/ico_linkedin.png" alt="Linkedin">
+    </footer>
 </body>
+
 </html>
