--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <a href="index.html"><img src="/img/logo_batman.png" alt="Logo Batman"></a>
-        <h1>Curriculum Vitae Bruce Wayne</h1>
+        <h1 class="">Curriculum Vitae Bruce Wayne</h1>
     </header>
     <main>
         <!-- DATOS -->
