Hojas de estilos terminada

--- a/index.html
+++ b/index.html
@@ -11,34 +11,38 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="/img/logo_batman.png" alt="Logo Batman"></a>
-        <h1 class="">Curriculum Vitae Bruce Wayne</h1>
+        <div>
+            <a href="index.html"><img src="/img/logo_batman.png" alt="Logo Batman"></a>
+            <h1 class="">Curriculum Vitae Bruce Wayne</h1>
+        </div>
+       
     </header>
     <main>
         <!-- DATOS -->
         <section>
             <h2>Datos Personales</h2>
             <ul>
-                <li><span>Nombre completo</span> Bruce Wayne</li>
-                <li><span>Fecha de Nacimiento</span> 01/05/1939</li>
-                <li><span>Lugar de Nacimiento</span> Gotham City</li>
+                <li><span>Nombre completo:</span> Bruce Wayne</li>
+                <li><span>Fecha de Nacimiento:</span> 01/05/1939</li>
+                <li><span>Lugar de Nacimiento:</span> Gotham City</li>
             </ul>
         </section>
 
         <!-- FORMACION -->
         <section>
             <h2>Formación Académica</h2>
-            <ul>
+            <ul type="None">
                 <li>
-                    <span>1956 -1661</span>
-                    <ul>
+                    <span>1956 -1661:</span>
+                    <ul type="None">
                         <li>Universidad del espantapájaros</li>
                         <li>Licenciatura en ereonaútica</li>
                     </ul>
                 </li>
+                <br>
                 <li>
-                    <span>1952-1956</span>
-                    <ul>
+                    <span>1952-1956:</span>
+                    <ul type="None">
                         <li>Secundario Gotham</li>
                         <li>Bachiller con especialización en trucos</li>
                     </ul>
@@ -49,24 +53,26 @@
         <!-- EXPERIENCIA -->
         <section>
             <h2>Experiencia Laboral</h2>
-            <ul>
+            <ul type="None">
                 <li>
                     <span> 1975-1985:</span>
-                    <ul>
+                    <ul type="None">
                         <li>Desocupado</li>
                         <li>Sin trabajo porquer se me rompió el batimovil</li>
                     </ul>
                 </li>
+                <br>
                 <li>
                     <span> 1965-1975:</span>
-                    <ul>
+                    <ul type="None">
                         <li>Cazavillanos y demás chusma</li>
                         <li>Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
                     </ul>
                 </li>
+                <br>
                 <li>
                     <span>1962-1965:</span>
-                    <ul>
+                    <ul type="None">
                         <li>Aprendiz de superhéroes</li>
                         <li> Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</li>
                     </ul>
@@ -80,5 +86,4 @@
         <img src="/img/ico_linkedin.png" alt="Linkedin">
     </footer>
 </body>
-
 </html>
