arreglando ruta de imagen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <a href="index.html"><img src="/img/logo_batman.png" alt="Logo Batman"></a>
+            <a href="index.html"><img src="./img/logo_batman.png" alt="Logo Batman"></a>
             <h1 class="">Curriculum Vitae Bruce Wayne</h1>
         </div>
        
@@ -82,8 +82,8 @@
     </main>
     <footer>
         <span>0810 - BATMAN</span> 
-        <img src="/img/ico_instagram.png" alt="Instragram">
-        <img src="/img/ico_linkedin.png" alt="Linkedin">
+        <img src="./img/ico_instagram.png" alt="Instragram">
+        <img src="./img/ico_linkedin.png" alt="Linkedin">
     </footer>
 </body>
 </html>
